// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo saml cot export "frodo saml cot export --all": should export all saml circles of trust to a single file 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export --all": should export all saml circles of trust to a single file 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "2f04818d-561e-4f8a-82e8-af2426112138": {
        "_id": "2f04818d-561e-4f8a-82e8-af2426112138",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [],
      },
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export --all-separate": should export all saml circles of trust to separate files 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export --all-separate": should export all saml circles of trust to separate files 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "2f04818d-561e-4f8a-82e8-af2426112138": {
        "_id": "2f04818d-561e-4f8a-82e8-af2426112138",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export --all-separate": should export all saml circles of trust to separate files 3`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export --cot-id AzureCOT": should export the saml circles of trust with id "AzureCOT" 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export --cot-id AzureCOT": should export the saml circles of trust with id "AzureCOT" 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export -A": should export all saml circles of trust to separate files 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export -A": should export all saml circles of trust to separate files 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "2f04818d-561e-4f8a-82e8-af2426112138": {
        "_id": "2f04818d-561e-4f8a-82e8-af2426112138",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export -A": should export all saml circles of trust to separate files 3`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export -a --file test.json": should export all saml circles of trust to a single file named test.json 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export -a --file test.json": should export all saml circles of trust to a single file named test.json 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "2f04818d-561e-4f8a-82e8-af2426112138": {
        "_id": "2f04818d-561e-4f8a-82e8-af2426112138",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [],
      },
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export -a": should export all saml circles of trust to a single file 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export -a": should export all saml circles of trust to a single file 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "2f04818d-561e-4f8a-82e8-af2426112138": {
        "_id": "2f04818d-561e-4f8a-82e8-af2426112138",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [],
      },
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export -i AzureCOT -f test.json": should export the saml circles of trust with id "AzureCOT" into file named test.json 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export -i AzureCOT -f test.json": should export the saml circles of trust with id "AzureCOT" into file named test.json 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;

exports[`frodo saml cot export "frodo saml cot export -i AzureCOT": should export the saml circles of trust with id "AzureCOT" 1`] = `""`;

exports[`frodo saml cot export "frodo saml cot export -i AzureCOT": should export the saml circles of trust with id "AzureCOT" 2`] = `
{
  "meta": Any<Object>,
  "saml": {
    "cot": {
      "AzureCOT": {
        "_id": "AzureCOT",
        "_type": {
          "_id": "circlesoftrust",
          "collection": true,
          "name": "Circle of Trust",
        },
        "status": "active",
        "trustedProviders": [
          "iSPAzure|saml2",
          "urn:federation:MicrosoftOnline|saml2",
          "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
          "SPAzure|saml2",
          "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        ],
      },
    },
    "hosted": {},
    "metadata": {},
    "remote": {},
  },
  "script": {},
}
`;
